[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cool-crypto-utilities"
version = "1.0.0"
description = "A Python toolkit for cryptographic operations"
authors = [{name = "CoolCryptoUtilities"}]
requires-python = ">=3.8"
dependencies = [
    "cryptography>=41.0.0",
]

[project.scripts]
crypto-utils = "src.main:main"
