[package]
name = "u53rx-agent"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["CoolCryptoUtilities"]

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
screenshots = { version = "0.8", optional = true }
anyhow = "1"

[features]
default = ["capture"]
capture = ["screenshots"]
